--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,19 @@ html, body {
 
 .big-header {
   text-align: center;
-  font-size: 10rem;
+  font-size: 30rem;
   font-family: 'Creepster', cursive;
   text-shadow: #000 1px 1px, #000 2px 2px, #000 3px 3px, #000 4px 4px, #000 5px 5px, #000 6px 6px, #000 7px 7px, #000 8px 8px, #000 9px 9px, #000 10px 10px, #000 11px 11px;
+}
+
+@media only screen and (max-width: 480px) {
+  .big-header {
+    font-size: 30vw;
+  }
+}
+
+@media only screen and (min-width: 480px) {
+  .big-header {
+    font-size: 10rem;
+  }
 }
