--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,8 @@ html, body {
   width: 100%;
   background: #000;
   color: #fff;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 * {
@@ -25,7 +27,12 @@ html, body {
   text-align: center;
   font-size: 30rem;
   font-family: 'Creepster', cursive;
-  text-shadow: #000 1px 1px, #000 2px 2px, #000 3px 3px, #000 4px 4px, #000 5px 5px, #000 6px 6px, #000 7px 7px, #000 8px 8px, #000 9px 9px, #000 10px 10px, #000 11px 11px;
+  text-shadow: #000 1px 1px,
+    #000 2px 2px, #000 3px 3px,
+    #000 4px 4px, #000 5px 5px,
+    #000 6px 6px, #000 7px 7px,
+    #000 8px 8px, #000 9px 9px,
+    #000 10px 10px, #000 11px 11px;
 }
 
 @media only screen and (max-width: 480px) {
